--- a/drinking_index.html
+++ b/drinking_index.html
@@ -36,7 +36,7 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header" style="left:10px; position: fixed;">
-            <a class="navbar-brand" href="https://cartobaldrica.github.io/">Home</a>
+            <a class="navbar-brand" href="atlas.html">Home</a>
             <a class="navbar-brand" href="#">Drinking Water</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -126,7 +126,7 @@
             
             <section  data-scene="contaminants">
                 <h3>Contaminant Sources</h3>
-                <p>Surface and ground water sources are susceptible to different contaminant sources. The OHA mandates specific treatment and filtration requirements for public water providers.</p>
+                <p>Surface and ground water sources are susceptible to different contaminant sources. The Oregon Health Authority (OHA) mandates specific treatment and filtration requirements for public water providers.</p>
                 <p>Potential contaminants are sorted into three risk categories, with highest risk sources having the greatest potential harm. Even if drinking water providers do identify contaminants, it can be difficult to locate their origin.</p>
 				<div class="leg"><p>Potential Contaminant Sources</p><i style="background: #4dff4d;"></i><p>Lowest-Risk</p><i style="background: #ffff00;"></i><p>Medium-Risk</p><i style="background: #cc0000;"></i><p>Highest-Risk</p><br><p style="text-align:left; font-weight:bold">Hover over points for details</p></div>
             </section> 
