--- a/fish_index.html
+++ b/fish_index.html
@@ -15,7 +15,10 @@
     <link rel="stylesheet" href="css/control-minimap.css" />
     <link rel="stylesheet" href="css/ekko-lightbox.css"/>        
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata" />
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata" />
+	<link href="https://fonts.googleapis.com/css?family=Catamaran&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Mukta:300,400,700&display=swap" rel="stylesheet">
+
   
 	<link rel="shortcut icon" href="img/oregon.ico" type="image/x-icon">
 	
@@ -38,7 +41,7 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header" style="left:10px; position: fixed;">
-            <a class="navbar-brand" href="https://cartobaldrica.github.io/">Home</a>
+            <a class="navbar-brand" href="atlas.html">Home</a>
             <a class="navbar-brand" href="#">Fish</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -140,7 +143,7 @@
 			
 			<section data-scene="redband">
                 <h3>Redband Trout</h3>
-				<p>Redband Trout are a subspecies of Rainbow Trout that are adapted to the arid regions of eastern Oregon. They are indigenous to Central Oregon, and historically lived anywhere connected to the Deschutes River. Today, their habitat has been somewhat limited due to impassible dams, flow alterations, non-native species, and chemical treatments. Redband Trout spawn in the Spring.</p>
+				<p>Redband Trout are a subspecies of Rainbow Trout that are adapted to the arid regions of Eastern Oregon. They are indigenous to Central Oregon, and historically lived anywhere connected to the Deschutes River. Today, their habitat has been somewhat limited due to impassible dams, flow alterations, non-native species, and chemical treatments. Redband Trout spawn in the Spring.</p>
 				<br/><br/>
 				<div class="leg"><p style ="font-weight: bold;">Habitat Extent</p>
 				<img src="img/redband.jpg" height="98" width="220" style="float: right;"><br/><i style="background: #00b093; opacity: 0.8; margin-right: 8px;"></i><p>Current</p><br/><i style="background: #ff3333; opacity: 0.8; margin-right: 8px;"></i><p>Historical</p><br/>
