--- a/groundwater_index.html
+++ b/groundwater_index.html
@@ -36,7 +36,7 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header" style="left:10px; position: fixed;">
-            <a class="navbar-brand" href="https://cartobaldrica.github.io/">Home</a>
+            <a class="navbar-brand" href="atlas.html">Home</a>
             <a class="navbar-brand" href="#">Groundwater</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -117,7 +117,7 @@
 			
 			<section data-scene="recharge3">
 				<h3>Volcanic</h3>
-				<p style = "color: #66cc66; display:inline">Volcanic</p><p style ="display:inline"> aquifers cover eastern and central Oregon. Basalt flows form the most productive volcanic aquifers, while other volcanic formations are more variable.</p>
+				<p style = "color: #66cc66; display:inline">Volcanic</p><p style ="display:inline"> aquifers cover Eastern and Central Oregon. Basalt flows form the most productive volcanic aquifers, while other volcanic formations are more variable.</p>
 				<br/><br/>
 				<p>Many volcanic aquifers exist in remote areas. As a result, there is a lack of information about the depth of these aquifers.</p>
 				<br/>
