--- a/infrastructure_index.html
+++ b/infrastructure_index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/control-minimap.css" />
     <link rel="stylesheet" href="css/ekko-lightbox.css"/>        
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata" />
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Inconsolata" />
 
 	<link rel="shortcut icon" href="img/oregon.ico" type="image/x-icon">
 	
@@ -37,7 +37,7 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header" style="left:10px; position: fixed;">
-            <a class="navbar-brand" href="https://cartobaldrica.github.io/">Home</a>
+            <a class="navbar-brand" href="atlas.html">Home</a>
             <a class="navbar-brand" href="#">Infrastructure</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -150,7 +150,7 @@
             
             <section data-scene="hydro">
                 <h3>Hydropower</h3>
-            	<p>Over 40% of Oregon's electricity is hydroelectric power produced by dams. Flowing water drives a water turbine and a generator, producing usable electricity. The first hydroelectric dams in Oregon were built in the 1930s and 40s, beginning with Bonneville Dam on the Columbia River. Many of the federally operated dams were constructed by the Army Corps. of Engineers and administered by the Bonneville Power Administration.</p>
+            	<p>Over 40% of Oregon's electricity is hydroelectric power produced by dams. Flowing water drives a water turbine and a generator, producing usable electricity. The first hydroelectric dams in Oregon were built in the 1930s and 40s, beginning with Bonneville Dam on the Columbia River. Many of the federally operated dams were constructed by the Army Corps of Engineers and administered by the Bonneville Power Administration.</p>
             	<br/><br/>
             	<div class ="leg">
 				<p style="font-weight:bold">Power Capacity in Megawatts</p>
