--- a/precipitation.html
+++ b/precipitation.html
@@ -41,7 +41,7 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header" style="left:10px; position: fixed;">
-            <a class="navbar-brand" href="https://cartobaldrica.github.io/">Home</a>
+            <a class="navbar-brand" href="atlas.html">Home</a>
             <a class="navbar-brand" href="#">Precipitation</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -482,7 +482,7 @@
 				/*if (scene == 'portland'){
 				miniMap;
 				}*/
-				map.setMaxBounds(map.getBounds());
+				//map.setMaxBounds(map.getBounds());
 
             return map;
         }
