--- a/surface_index.html
+++ b/surface_index.html
@@ -37,7 +37,7 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header" style="left:10px; position: fixed;">
-            <a class="navbar-brand" href="http://cartobaldrica.github.io/">Home</a>
+            <a class="navbar-brand" href="atlas.html">Home</a>
             <a class="navbar-brand" href="#">Surface Water</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -133,7 +133,7 @@
 			
 			<section data-scene="councils">
                 <h3>Watershed Councils</h3>
-                <p>Watershed councils are independent, voluntary organizations established to improve watersheds in their localities. Watershed are strictly managed locally, although the state provides guidance for their formation. Councils assess local water conditions, provide restorative and conservation services, and create communities centered around protecting water.</p>
+                <p>Watershed councils are independent, voluntary organizations established to improve watersheds in their localities. Watersheds are strictly managed locally, although the state provides guidance for their formation. Councils assess local water conditions, provide restorative and conservation services, and create communities centered around protecting water.</p>
 				<br/>
 				<br/>
 				<div class ="leg">
@@ -143,7 +143,7 @@
 			
 			<section data-scene="wetlands">
                 <h3>Major Wetlands</h3>
-                <p>Over 40% of Oregon's wetlands have drained or filled-in since Euro-American settlement. Wetlands are among the most important ecosystems for wildlife and water quality. Wetlands store and clean water, prevent erosion, and control flooding. They are also important habitats for a variety of plants and animals.</p>
+                <p>Over 40% of Oregon's wetlands have been drained or filled-in since Euro-American settlement. Wetlands are among the most important ecosystems for wildlife and water quality. Wetlands store and clean water, prevent erosion, and control flooding. They are also important habitats for a variety of plants and animals.</p>
 				<br/>
 				<br/>
 				<p>This map shows Oregon's "Greatest Wetlands", which were identified by the <a src="http://wetlandsconservancy.org/">Wetlands Conservancy.</a></p>
