--- a/umatilla_index.html
+++ b/umatilla_index.html
@@ -44,7 +44,7 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header" style="left:10px; position: fixed;">
-            <a class="navbar-brand" href="http://cartobaldrica.github.io/">Home</a>
+            <a class="navbar-brand" href="atlas.html">Home</a>
             <a class="navbar-brand" href="#">Umatilla</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
