--- a/flood_index.html
+++ b/flood_index.html
@@ -40,7 +40,7 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header" style="left:10px; position: fixed;">
-            <a class="navbar-brand" href="https://cartobaldrica.github.io/">Home</a>
+            <a class="navbar-brand" href="atlas.html">Home</a>
             <a class="navbar-brand" href="#">Flooding</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -100,7 +100,7 @@
                 <br/><h5>"... and a morning dawned when there was not a sign of civilization left to tell where Champoeg had stood."</h5>
                 <h5>from The Oregonian, February 21, 1988, reprinted in Oregon Historical Quarterly</h5>
                 <h3>1861 Flood</h3>
-            	<p>The city of Champoeg was not the only victim of the massive flooding that struck the Willamette Valley between November and December, 1861. The flood marked either the end for Linn City, Santiam and Orleans, which were growing towns throughout the valley. USGS estimates place floodwater at its highest (near Oregon City) 55 feet above base level, and at flows of approximately 590,000 cubic feet per second (cfs). These flow rates are almost 5 times greater than Willamette River average discharge.</p><p style = "color: #bf4040">It is thought to the largest Willamette flood in the past 200 years.</p>
+            	<p>The city of Champoeg was not the only victim of the massive flooding that struck the Willamette Valley between November and December, 1861. The flood marked the end for Linn City, Santiam, and Orleans, which were growing towns throughout the valley at the time. USGS estimates place floodwater at its highest (near Oregon City) 55 feet above base level, and at flows of approximately 590,000 cubic feet per second (cfs). These flow rates are almost 5 times greater than Willamette River average discharge.</p><p style = "color: #bf4040">It is thought to be the largest Willamette flood in the past 200 years.</p>
 				<br/><br/><div class="leg"><img src="img/point.png" style="height:10px; width:10px; margin-top:7px; margin-left:1px;"><p style = "margin-top:5px;">Towns Destroyed</p><br><i style="background: #bf4040; fillOpacity: .5; color:#993333; weight: 1; opacity: 0.5"></i><b><p>Flood Extent</b></p></div>
 				<br>
 				<a href="img/1861_flood_account.png" data-toggle="lightbox" data-footer="Uddated account by Oregon City steamboat captain George Anson Pease."> <img src="img/1861_flood_account.png" class="img-sup" style="height:80px; width:80px; border:4px solid #000000;"></a><br/><p style="font-size:16px;">Select to view</p>
