--- a/water_use_index.html
+++ b/water_use_index.html
@@ -36,7 +36,7 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header " style="left:10px; position: fixed;">
-            <a class="navbar-brand" href="https://cartobaldrica.github.io/">Home</a>
+            <a class="navbar-brand" href="atlas.html">Home</a>
             <a class="navbar-brand" href="#">Water Use</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
