--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Oregon Water Geoportal</title>
+    <title>Oregon: Your Water All Year</title>
 
 	<link rel="shortcut icon" href="img/oregon.ico" type="image/x-icon">
 
