--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="col-xs-12 col-sm-12 portfolio-item" style="margin-bottom: 25px; ">
                         <div class="container"> 
                             <div class="col-xs-12 col-sm-5" id="text-container">
-                                <a href="https://www.facebook.com/Oregon.YearofWater/" style="color:black; text-decoration: none;">
+                                <a href="year_of_water.html" style="color:black; text-decoration: none;">
                                     <img class="icon-img" src="img/year-of-water.png" style="width:50%;">
                                     <!--<h2>Year of Water</h2>-->
                                     <p>A university-led, statewide initiative to convey the connectedness of water – where it comes
@@ -192,9 +192,12 @@
             <i style="font-size:36px; z-index:10;" id="arrow" class="animated zoomIn infinite glyphicon glyphicon-chevron-down chevron-down"></i>
             <div id="foot-row" class="row" style="bottom:0; position:fixed; background:white; width:100%; padding:10px;">
                 <div class="col-xs-12 col-sm-12" >
-                    <a href="https://inr.oregonstate.edu/" target="_blank"><img src="img/INR-icon.png" style="width:250px;" ></a>
-                    <a href="https://oregonstate.edu/" target="_blank"><img src="img/osu-icon.jpg" style="width:200px;" ></a>
-                    <a href="https://www.pdx.edu/" target="_blank"><img src="img/psu-icon.jpg" style="width:200px;" ></a>
+                    <ul>
+                        <li><a href="https://inr.oregonstate.edu/" target="_blank"><img src="img/INR-IWW_logo.png" style="width:300px;" ></a></li>
+                        <li><a href="https://oregonstate.edu/" target="_blank"><img src="img/osu-icon.jpg" style="width:200px;" ></a></li>
+                        <li><a href="https://www.pdx.edu/" target="_blank"><img src="img/psu-icon.jpg" style="width:200px;" ></a></li>
+                        <li><a href="https://www.uoregon.edu/" target="_blank"><img src="img/uofo_logo.jpg" style="width:200px;" ></a></li>
+                    </ul>
                 </div>
             </div>
             
