--- a/year_of_water.html
+++ b/year_of_water.html
@@ -26,13 +26,17 @@
     <link href="https://fonts.googleapis.com/css?family=Catamaran&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Mukta:300,400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,600,700,800,900&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,500,600,700&display=swap" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+    <style>
+    </style>
 </head>
 
 <body>
@@ -61,7 +65,7 @@
                             <div class="col-xs-12 col-sm-1"></div>
                             <div class="col-xs-12 col-sm-5" id="text-container">
                                 <a href="https://www.facebook.com/Oregon.YearofWater/" style="color:black; text-decoration: none;">
-                                    <img class="icon-img" src="img/year-of-water.png" style="width:100%; margin-top:200px;">
+                                    <img class="icon-img" src="img/year-of-water.png" style="width:100%; margin-top:125px;">
                                 </a>
                             </div>
                             <div class="col-xs-12 col-sm-6">
@@ -75,7 +79,7 @@
                         <div class="container"> 
                             <div class="col-xs-12 col-sm-1"></div>
                             <div class="col-xs-12 col-sm-5" >
-                                <h1>About</h1>
+                                <h1 style="margin-bottom:30px;">About</h1>
                                 <p class="text-container">The Year of Water is a university-led, statewide initiative to convey the connectedness of water
                                     – where it comes from, where it goes, and why we should care. The Year of Water not only
                                     highlights the role Oregon’s research universities play as community and industry leaders and
@@ -146,44 +150,51 @@
                                 <h1>Table of Contents</h1>
                                 <div class="table" style="margin-top:25px;">
                                     <div class="table-item">
-                                        <a href="basins.html" style="color:black; text-decoration: none;">
+                                        <img src="img/basin_icon.png" style="width:50px; display:inline-block; position:absolute; margin-top:30px;">
+                                        <a href="basins.html" style="color:black; text-decoration: none; display:inline-block; margin-left:85px;">
                                             <h2 style="font-size:36px; font-weight:bold;">Oregon's Basins</h2>
                                             <p style="font-size:20px; margin-right:50px;">Profiles of Oregon's water basins.</p>
                                         </a>
                                     </div>
                                     <div class="table-item">
-                                        <a href="research_projects.html" style="color:black; text-decoration: none;">
+                                        <img src="img/research_icon.png" style="width:50px; display:inline-block; position:absolute; margin-top:30px;">
+                                        <a href="research_projects.html" style="color:black; text-decoration: none; margin-left:85px; display:inline-block;">
                                             <h2 style="font-size:36px; font-weight:bold;">Water Research</h2>
                                             <p style="font-size:20px; margin-right:50px;">A database of water-related research and associated products.</p>
                                         </a>
                                     </div>
                                     <div class="table-item">
-                                        <a href="https://water.oregonstate.edu/educational-resources/water-education-programs-oregon" style="color:black; text-decoration: none;">
+                                        <img src="img/education_icon.png" style="width:50px; display:inline-block; position:absolute; margin-top:30px;">
+                                        <a href="https://water.oregonstate.edu/educational-resources/water-education-programs-oregon" style="color:black; text-decoration: none; margin-left:85px; display:inline-block;">
                                             <h2 style="font-size:36px; font-weight:bold;">Water-related Education Programs</h2>
                                             <p style="font-size:20px; margin-right:50px;">Oregon universities that offer opportunities to pursue advanced degrees related to
                                                 water resources.</p>
                                         </a>
                                     </div>
                                     <div class="table-item">
-                                        <a href="https://www.facebook.com/pg/Oregon.YearofWater/events/" style="color:black; text-decoration: none;">
+                                        <img src="img/calendar_icon.png" style="width:50px; display:inline-block; position:absolute; margin-top:30px;">
+                                        <a href="https://www.facebook.com/pg/Oregon.YearofWater/events/" style="color:black; text-decoration: none; margin-left:85px; display:inline-block;">
                                             <h2 style="font-size:36px; font-weight:bold;">Calendar</h2>
                                             <p style="font-size:20px; margin-right:50px;">View upcoming events.</p>
                                         </a>
                                     </div>
                                     <div class="table-item">
-                                        <a href="https://www.facebook.com/Oregon.YearofWater/" style="color:black; text-decoration: none;">
+                                        <img src="img/blog_icon.png" style="width:50px; display:inline-block; position:absolute; margin-top:30px;">
+                                        <a href="https://www.facebook.com/Oregon.YearofWater/" style="color:black; text-decoration: none; margin-left:85px; display:inline-block;">
                                             <h2 style="font-size:36px; font-weight:bold;">Blog</h2>
                                             <p style="font-size:20px; margin-right:50px;">Informational posts relating to the Year of Water.</p>
                                         </a>
                                     </div>
                                     <div class="table-item">
-                                        <a href="https://www.facebook.com/Oregon.YearofWater/" style="color:black; text-decoration: none;">
+                                        <img src="img/book_icon.png" style="width:50px; display:inline-block; position:absolute; margin-top:30px;">
+                                        <a href="https://www.facebook.com/Oregon.YearofWater/" style="color:black; text-decoration: none; margin-left:85px; display:inline-block;">
                                             <h2 style="font-size:36px; font-weight:bold;">WaterReads</h2>
                                             <p style="font-size:20px; margin-right:50px;">Collection of water-related books published under Oregon university presses.</p>
                                         </a>
                                     </div>
                                     <div class="table-item">
-                                        <a href="involvement.html" style="color:black; text-decoration: none;">
+                                        <img src="img/involvement_icon.png" style="width:50px; display:inline-block; position:absolute; margin-top:30px;">
+                                        <a href="involvement.html" style="color:black; text-decoration: none; margin-left:85px; display:inline-block;">
                                             <h2 style="font-size:36px; font-weight:bold;">How to be Involved</h2>
                                             <p style="font-size:20px; margin-right:50px;">Find out what you can do to support the Year of Water.</p>
                                         </a>
