--- a/year_of_water.html
+++ b/year_of_water.html
@@ -147,7 +147,7 @@
                         <div class="container" style="padding-bottom:100px;"> 
                             <div class="col-xs-12 col-sm-1"></div>
                             <div class="col-xs-12 col-sm-5" id="text-container">
-                                <h1>Table of Contents</h1>
+                                <h1>Contents</h1>
                                 <div class="table" style="margin-top:25px;">
                                     <div class="table-item">
                                         <img src="img/basin_icon.png" style="width:50px; display:inline-block; position:absolute; margin-top:30px;">
@@ -229,6 +229,14 @@
                                     
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div id="logo-row">
+                    <div class="col-xs-12 col-sm-12 portfolio-item" style="margin-bottom: 50px; padding:10px;">
+                            <a href="https://inr.oregonstate.edu/" target="_blank"><img src="img/INR-IWW_logo.png" style="width:300px; display:block; margin:auto;" ></a><br/>
+                            <a href="https://oregonstate.edu/" target="_blank"><img src="img/osu-icon.jpg" style="width:200px; display:block; margin:auto;" ></a><br/>
+                            <a href="https://www.pdx.edu/" target="_blank"><img src="img/psu-icon.jpg" style="width:200px; display:block; margin:auto;" ></a><br/>
+                            <a href="https://www.uoregon.edu/" target="_blank"><img src="img/uofo_logo.jpg" style="width:200px; display:block; margin:auto;" ></a><br/>
                     </div>
                 </div>
             <!-- /.row -->
