--- a/research_projects.html
+++ b/research_projects.html
@@ -48,7 +48,7 @@
 <body>
     
     <nav class="navbar navbar-expand-lg" id="nav" style="border-bottom:2px solid black;">
-        <img src="img/year-of-water.png" style="height:100px; display:block; margin:auto;">
+        <a href="year_of_water.html"><img src="img/year-of-water.png" style="height:100px; display:block; margin:auto;"></a>
       </nav>
 
             <div class="row" style="margin-bottom: 20px; height:100%; ">
@@ -85,10 +85,13 @@
                     </div>
                 </div>-->
                 <div id="searchBar">
-                    <input id="search" type="text" placeholder="Search For a Project...">
-                    <button style="margin-left:5px;" onclick="advSearch()">Advanced Search</button>
+                    <input id="search" list="searchList" type="text" placeholder="Search For a Project..." style="margin-left:10px;">
+                    <button id="advSearch" style="margin-left:10px;" onclick="advSearch()">Advanced Search</button>
                     <!--<button style="margin-left:5px;" onclick="reset()">Reset</button>-->
                     <!--<button onclick="search()">Search</button>-->
+                    <datalist id="searchList">
+
+                    </datalist>
                 </div>
                 <!--<div id="buttons" style="position:fixed; top:150px;">
                     <div class="dropdown">
@@ -118,7 +121,7 @@
                 <div id="panel" class="col-xs-12 col-sm-3" style="padding-left: 0; z-index:1; padding-right:0; margin-top:180px;">
                     <div id="scrollbar" style="padding:10px;">
                         <div id="advancedSearch" style="display:none;">
-                            <div style="display:inline-block;">
+                            <div style="display:inline-block; padding-left:5px; color:black;">
                                 <input type="checkbox" id="environment_check" name="environment" value="environment" onclick="themeClick('Environment','#environment_check','theme')">
                                 <label for="environment">Environment</label><br>
                                 <input type="checkbox" id="health_check" name="health" value="health" onclick="themeClick('Health','#health_check','theme')">
@@ -141,7 +144,7 @@
                         </div>
                         <div id ="overall" style="padding:5px;">
                             <h2 class="theme_title">Introduction</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                            <p style="margin-bottom:20px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                         </div>   
                         <div id="projects"></div>
                     </div>
@@ -155,7 +158,7 @@
 
 
     </div>
-
+    <script type="text/javascript" src="https://npmcdn.com/csv2geojson@5.1.1/csv2geojson.js"></script>
     <script>
         $('input').val('');
         $('input:checkbox').prop('checked', false);
@@ -329,6 +332,16 @@
         }
 
         parseData("assets/yow/theme_points.csv", doStuff); 
+        
+        /*var geojson = csv2geojson(dataTable, {
+            latfield: 'lat',
+            lonfield: 'lon',
+            delimiter: ','
+            }, function(err, data) {
+                console.log(data);
+        });*/
+        console.log(theme_points);
+
 
         function resizeMap(){
             if ($(window).width() <= 768){
