--- a/basins.html
+++ b/basins.html
@@ -6,8 +6,21 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+
+    <meta name="title" content="Year of Water: Oregon's Basins">
+    <meta name="description" content="Summary of Oregon's major water basins.">
+    <meta name="image" content="img/year-of-water.png">
+    <meta name="author" content="Institute for Natural Resources">
+
+    <meta property="og:title" content="Year of Water: Oregon's Basins">
+    <meta property="og:description" content="Summary of Oregon's major water basins.">
+    <meta property="og:image" content="img/year-of-water.png">
+    <meta property="og:author" content="Institute for Natural Resources">
+
+    <meta property="twitter:title" content="Year of Water: Oregon's Basins">
+    <meta property="twitter:description" content="Summary of Oregon's major water basins.">
+    <meta property="twitter:image" content="img/year-of-water.png">
+    <meta property="twitter:author" content="Institute for Natural Resources">
 
     <title>Year of Water</title>
 
