--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                     <a href="http://pnwatlas.oregonstate.edu/#/water" target="_blank" style="color:black; text-decoration: none;">
                                     <img class="icon-img" src="img/apnw_water.png" style="width:100%;" >
                                     <!--<h2 class="project-title">Atlas of the Pacific Northwest: Water Chapter</h2>-->
-                                    <p>The Atlas of the Pacific Northwest (2018) edition is the first digital, fully-interactive format, designed to highlight facets of the Pacific Northwest landscape with novel approaches to data presentation. Here you can link directly to one of its 10 chapters – Water.</p>
+                                    <p>The Atlas of the Pacific Northwest 2019 edition is the first digital, fully-interactive format, designed to highlight facets of the Pacific Northwest landscape with novel approaches to data presentation. Here you can link directly to one of its 10 chapters – Water.</p>
                                     </a>
                                 </div>
                             </div>
