--- a/year_of_water.html
+++ b/year_of_water.html
@@ -55,7 +55,7 @@
 
 <body>
     
-    <nav class="navbar navbar-expand-lg" id="nav" style="border-bottom:2px solid black;">
+    <nav class="navbar navbar-expand-lg" id="nav" style="border-bottom:2px solid black; top:0;">
         <img src="img/year-of-water.png" style="height:100px; display:block; margin:auto;">
       </nav>
 
@@ -74,7 +74,7 @@
             <!-- Projects Row -->
             <div id="panel" style="margin-top:120px;">
                 <div class="row" style="height:100%;">
-                    <div class="col-xs-12 col-sm-12 portfolio-item" style="margin-bottom: 25px; ">
+                    <div class="col-xs-12 col-sm-12 portfolio-item">
                         <div class="container"> 
                             <div class="col-xs-12 col-sm-12 col-md-1"></div>
                             <div class="col-xs-12 col-sm-12 col-md-5" id="text-container">
@@ -82,17 +82,26 @@
                                     <img class="icon-img" src="img/year-of-water.png" style="width:100%; margin-top:40px;">
                                 </a>
                             </div>
-                            <div class="col-xs-12 col-sm-12 col-md-6">
-                                    
+                            <div class="col-xs-12 col-sm-12 col-md-6"></div>
+                        </div>
+                        <div class="container"> 
+                            <div class="col-xs-12 col-sm-12 col-md-1"></div>
+                            <div class="col-xs-12 col-sm-12 col-md-5">
+                                <div id="top-contents">
+                                    <a href="#about" class="top-contents-item">About</a>   
+                                    <a href="#contents" class="top-contents-item">Contents</a>        
+                                    <a href="#leading-units" class="top-contents-item">Leading Units</a>  
+                                </div>
                             </div>
+                            <div class="col-xs-12 col-sm-12 col-md-6"></div>
                         </div>
                     </div>
                 </div>
-                <div class="row" style="margin-top:100px;height:100%;">
-                    <div class="col-xs-12 col-sm-12 portfolio-item" style="margin-bottom: 25px; ">
+                <div class="row" id="about" style="height:100%; padding-top:100px;">
+                    <div class="col-xs-12 col-sm-12 portfolio-item" >
                         <div class="container"> 
                             <div class="col-xs-12 col-sm-12 col-md-1"></div>
-                            <div class="col-xs-12 col-sm-12 col-md-5" >
+                            <div class="col-xs-12 col-sm-12 col-md-5">
                                 <h1 style="margin-bottom:30px;">About</h1>
                                 <p class="text-container">The Year of Water is a university-led, statewide initiative to convey the connectedness of water
                                     – where it comes from, where it goes, and why we should care. The Year of Water not only
@@ -104,15 +113,16 @@
                                     Through this initiative, we aspire to leverage and foster water collaborations within and outside
                                     of the universities; increase awareness and coordination to discover synergies across the
                                     universities; promote water literacy; and broaden the collective impact and benefits of our work.
+                                    <br/><br/>
+                                    This site was created by <b>Gareth Baldrica-Franklin</b>, <b>Lisa Gaines</b>, and <b>Janine Salwasser</b>. 
                                 </p>
                             </div>
                             <div class="col-xs-12 col-sm-12 col-md-6">
-
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="row" style="margin-top:100px; height:100%;">
+                <div class="row" id="contents" style=" height:100%; padding-top:100px;">
                     <div class="col-xs-12 col-sm-12 portfolio-item" style="margin-bottom: 25px; ">
                         <div class="container" style="padding-bottom:100px;"> 
                             <div class="col-xs-12 col-sm-12 col-md-1"></div>
@@ -177,8 +187,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="row" style="margin-top:600px;height:100%;">
-                    <div class="col-xs-12 col-sm-12 portfolio-item" style="margin-bottom: 100px; ">
+                <div class="row" id="leading-units" style="margin-top:550px;height:100%; padding-top:100px;">
+                    <div class="col-xs-12 col-sm-12 portfolio-item" style="margin-bottom: 100px;">
                         <div class="container"> 
                             <div class="col-xs-12 col-sm-12 col-md-1"></div>
                             <div class="col-xs-12 col-sm-12 col-md-5" >
